[gd_scene load_steps=2 format=2]

[ext_resource path="res://BadGuys/Ranged/Ranged/Bullet/Bullet.gd" type="Script" id=1]

[node name="Bullet" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="HitSomething" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitSomething"]

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="HitSomething" to="." method="_on_HitSomething_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
